# lecture-11

./: README.md  crewai_flow.html  fun_fact.md  pyproject.toml
src/project7/: __init__.py  main.py  main1.py  main2.py
