[project]
name = "project7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fatima Khan", email = "pinkoosagi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
project7 = "project7:main"
simpleflow = "project7.main:kickoff"
chain_prompt = "project7.main1:kickoff"
route_run = "project7.main2:kickoff"
route_plot = "project7.main2:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
